# python-project-49

./: .gitignore  README.md  pyproject.toml  requerements.txt
brain__games/: engine.py
brain__games/games/: calc_game.py  even_game.py
brain__games/scripts/: brain_calc.py  brain_even.py  brain_games.py
brain_games/: cli.py  engine.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/modules/: game_modules.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
