[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Robinwurst <\"Neorganizm911@yandex.ru\">"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "0.4.1"
flake8 = "7.0.0"

[tool.poetry.dev-dependencies]
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"