[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project, 5 games"
license = "MIT"
authors = ["Robinwurst <\"Neorganizm911@yandex.ru\">"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "0.4.1"


[tool.poetry.dev-dependencies]
flake8 = "7.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"